
''' Kramer '''

Updated to use common configuration catalogue support rather than model specific.

''' Jetty '''

Added correct number of session count handling for HTTPS clients.
Added "Too Many Clients" message when appropriate
Rewrote cache handler to support complex commands (eg. audio) as well as simple commands. Resolves issue [ticket:4]

''' System ''''

Enforced stronger type checking in many places to make use of JDK5 type checking, for compile time type validation rather than run time exceptions.
Central command queue wrapped in an object to simplify later changes to a messaging bus, needed to support master/slave models and possible script engines running 
in seperate JVMs.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6a6.zip V1.6a6] ==

''' Comms '''

Added the ability for a model to specify the minimum time between packets to be sent to the device. This is to stop flooding device inputs. The value should be set before the 
device connection, the constructor is a reasonable place.

{{{
		this.setInterCommandInterval(10);
}}}


Improved IO exception handling for both serial and IP connections, the system should catch more errors and result in a system reconnection.


''' Jetty '''

Changed Jetty to HTTPS,  the certificate is placed in the datafiles directory in a file called keystore. It must have an access password of "building12".
WWWROOT has been removed from the bootfiles configuration, instead www is hard coded, the HTML wrapper file that delivers the flash file should be provided from this location.
A servlet to log out has been added; SERVERPATH/webclient/logout
A flag has been added to the bootstrap file to disable user name / password challenges, this is to facilitate flash development within the flash IDE which is incapable of providing this
information.