@@ -40,11 +40,11 @@ public class AnalogFactory {
 		
 		try  {
 			String tmpKey = element.getAttributeValue("KEY");
-			String key = targetDevice.formatKey (tmpKey);
 
 			String outKey = element.getAttributeValue("DISPLAY_NAME");
 			Analog theInput = new Analog(name,
 					connectionType, outKey);
+			String key = targetDevice.formatKey (tmpKey,theInput);
 			theInput.setKey (key);
 			theInput.setGroupName(groupName);
 			rawHelper.checkForRaw ( element,theInput);
